# audiobook-generator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
docs/project/: ARCHITECTURE.md  BACKLOG.md  SPEC.md
src/audiobook_generator_cli/: __init__.py  cli.py  main.py
src/audiobook_generator_cli/application/: __init__.py  merge.py  models.py  progress.py  text.py
src/audiobook_generator_cli/application/services/: __init__.py  audiobook_orchestrator.py
src/audiobook_generator_cli/domain/: __init__.py  constants.py  errors.py  models.py  ports.py
src/audiobook_generator_cli/infrastructure/: __init__.py
src/audiobook_generator_cli/infrastructure/epub/: __init__.py  epub_repository.py
src/audiobook_generator_cli/infrastructure/llm/: __init__.py  ollama_audio_generator.py  openai_speech_audio_generator.py
src/audiobook_generator_cli/infrastructure/logging/: __init__.py  logger_factory.py
tests/integration/: test_pipeline_integration.py
tests/integration/fixtures/: minimal.epub
tests/unit/: test_audiobook_orchestrator.py  test_extract_text.py  test_openai_speech_audio_generator.py  test_punctuation_hints.py  test_speak_command.py
